--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,7 +4,7 @@
 inventory = ./inventory
 
 #user in managed node (automation task(s) executed with this user's privilege)
-remote_user = ec2-user
+#remote_user = ec2-user #commented because user in defined in group_vars directory
 
 #do not prompt for ssh password if public key is deployed to managed node(s)
 ask_pass = no
@@ -13,7 +13,7 @@ ask_pass = no
 host_key_checking = no
 
 #private key file location (if it's not in default location)
-private_key_file = secrets/rhel.pem
+#private_key_file = secrets/rhel.pem #commented because key is defined in group_vars directory
 
 #remote user's privilege is escalated to root to do admin tasks
 [privilege_escalation]
